<resources>
    <string name="app_name" translatable="false">Age in Days</string>

    <!-- Strings used for fragments for navigation -->
    <string name="title_activity_settings">Settings</string>
    <string name="main_fragment_label">Overview</string>
    <string name="edit_fragment_label">Edit Entry</string>

    <!-- Contextual Action Bar -->
    <string name="cab_delete">delete entry</string>
    <string name="cab_change">modify entry</string>
    <string name="cab_checked_string">selected</string>

    <!-- Main fragment -->
    <string name="years"><![CDATA[<b>%d</b><br />Years]]></string>
    <string name="days"><![CDATA[<b>%d</b><br />Days]]></string>
    <string name="action_add_new">Add new</string>

    <!-- Edit fragment -->
    <string name="label_person">Person:</string>
    <string name="label_date_picker">Date of birth:</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <!-- Placeholder -->
    <string name="placeholder_name" translatable="false">Max Mustermann</string>
    <string name="placeholder_date" translatable="false">2000–01–01</string>
    <string name="placeholder_years" translatable="false"><![CDATA[<b>25</b><br />Years]]></string>
    <string name="placeholder_days" translatable="false"><![CDATA[<b>10000</b><br />Days]]></string>

    <!-- Preference Titles -->
    <string name="customization_header">Customization</string>

    <!-- Customization Preferences -->
    <string name="theme_key" translatable="false">theme</string>
    <string name="theme_title">Theme</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="dark_theme_value" translatable="false">dark</string>
    <string name="light_theme_value" translatable="false">light</string>
    <string name="system_theme_value" translatable="false">system</string>
    <string name="dark_theme_entry">Dark</string>
    <string name="light_theme_entry">Light</string>
    <string name="system_theme_entry">System default</string>
</resources>